--- a/foundations/01-css-methods/index.html
+++ b/foundations/01-css-methods/index.html
@@ -5,7 +5,17 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Methods for Adding CSS</title>
+    
     <link rel="stylesheet" href="css/style.css">
+
+    <style>
+      p {
+        color: white; 
+        background-color: green; 
+        font-size: 18px; 
+        font-family: sans-serif}
+    </style>
+  
   </head>
   <body>
     <div>Style me via the external method!</div>
